[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/32x32/smile.png" type="Texture" id=1]
[ext_resource path="res://chunk/header.gd" type="Script" id=2]
[ext_resource path="res://assets/images/32x32/faceoh.png" type="Texture" id=3]

[node name="Node" type="Control"]
rect_scale = Vector2( 2, 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 80.2732
margin_top = 7.6576
margin_right = 214.273
margin_bottom = 40.6576
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="Control"]
margin_left = 10.0
margin_top = 10.0
margin_right = 48.0
margin_bottom = 24.0
text = "Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="Control"]
margin_left = 56.0
margin_top = 4.0112
margin_right = 130.0
margin_bottom = 28.0112
min_value = 2.0
max_value = 50.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
margin_left = 210.273
margin_top = 7.6576
margin_right = 344.273
margin_bottom = 40.6576
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="Control2"]
margin_left = 10.5673
margin_top = 10.0
margin_right = 52.5673
margin_bottom = 24.0
text = "Height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="Control2"]
margin_left = 64.0
margin_top = 3.687
margin_right = 138.0
margin_bottom = 27.687
min_value = 2.0
max_value = 50.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="."]
margin_left = 350.273
margin_top = 7.6576
margin_right = 484.273
margin_bottom = 40.6576
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="Control3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 42.0
margin_bottom = 24.0
text = "Mine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="Control3"]
margin_left = 56.0
margin_top = 3.687
margin_right = 130.0
margin_bottom = 27.687
min_value = 1.0
max_value = 2499.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="."]
margin_left = 40.2732
margin_right = 80.2732
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Control4"]
margin_top = 7.6576
margin_right = 32.0
margin_bottom = 39.6576
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Control/SpinBox" to="." method="_on_Width_value_changed"]
[connection signal="value_changed" from="Control2/SpinBox" to="." method="_on_Height_value_changed"]
[connection signal="value_changed" from="Control3/SpinBox" to="." method="_on_Mine_value_changed"]
[connection signal="pressed" from="Control4/TextureButton" to="." method="_on_GameStart_pressed"]
